nav section added

--- a/index.html
+++ b/index.html
@@ -4,8 +4,27 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Assignment=1</title>
+    <link rel="stylesheet" href="style/style.css">
 </head>
 <body>
-    
+
+
+    <!-- header section------------------------------ -->
+    <header class="header">
+        <nav class="nav">
+            <h3>HS Niloy</h3>
+            <div class="download-btn">
+                <button>Download Resume</button>
+            </div>
+        </nav>
+    <!-- Banner section------------------------------ -->
+     
+    </header>
+    <main>
+
+    </main>
+    <footer>
+
+    </footer>
 </body>
 </html>
