banner section added

--- a/index.html
+++ b/index.html
@@ -18,7 +18,16 @@
             </div>
         </nav>
     <!-- Banner section------------------------------ -->
-     
+     <section class="banner-section">
+        <div class="banner-content">
+            <img src="assets/Group.png" alt="coder">
+            <h1>"In the near future, I hope to become a Developer."</h1>
+            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text.</p>
+            <div class="banner-btn-container">
+                <button>Contact with me</button>
+            </div>
+        </div>
+     </section>
     </header>
     <main>
 
