web-devlopment section done

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 
 
-    <!-- header section------------------------------ -->
+    <!-- nav section------------------------------ -->
     <header class="header">
         <nav class="nav">
             <h3>HS Niloy</h3>
@@ -30,7 +30,43 @@
      </section>
     </header>
     <main>
-
+    <!-- web-development section ----------------- -->
+     <section class="web-dev">
+        <div class="web-dev-title">
+            <h1>Why Web Development??</h1>
+            <p class="primary-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text.</p>
+        </div>
+        <div class="web-dev-content-container-1 box">
+            <div class="web-dev-content">
+                <h5>I will Do Coding and Change The World</h5>
+                <p class="primary-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+                <div><button><a href="">Learn More</a></button></div>
+            </div>
+            <div class="web-dev-content-image">
+                <img src="assets/Layer_1.png" alt="">
+            </div>
+        </div>
+        <div class="web-dev-content-container-2 box">
+            <div class="web-dev-content-image">
+                <img src="assets/Group 3.png" alt="">
+            </div>
+            <div class="web-dev-content">
+                <h5>I will help People by creating Modern Web System</h5>
+                <p class="primary-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+                <div><button><a href="">Learn More</a></button></div>
+            </div>
+        </div>
+        <div class="web-dev-content-container-3 box">
+            <div class="web-dev-content">
+                <h5>I will Do Coding and Change The World</h5>
+                <p class="primary-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+                <div><button><a href="">Learn More</a></button></div>
+            </div>
+            <div class="web-dev-content-image">
+                <img src="assets/Group 4.png" alt="">
+            </div>
+        </div>
+     </section>
     </main>
     <footer>
 
