--- a/index.html
+++ b/index.html
@@ -67,6 +67,17 @@
             </div>
         </div>
      </section>
+     <!-- Inspiration section --------------------- -->
+      <section class="inspiration">
+        <div class="inspiration-title">
+            <h1 class="primary-h1">My Inspiration</h1>
+            <p class="primary-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text.</p>
+        </div>
+        <div class="inspiration-video-box">
+            <iframe width="100%" height="100%" src="https://www.youtube.com/embed/Cxf5sOXG0w0?si=zMFZqS4gSRpLK5T0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        </div>
+      </section>
+      <!-- Current target section ------------------ -->
     </main>
     <footer>
 
