Current-target-section added

--- a/index.html
+++ b/index.html
@@ -78,6 +78,32 @@
         </div>
       </section>
       <!-- Current target section ------------------ -->
+       <section class="current-target">
+        <div class="current-target-title">
+            <h1 class="primary-h1">My Current Target</h1>
+            <p class="primary-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text.</p>
+        </div>
+        <div class="current-target-content-container">
+            <div class="current-target-content html">
+                <img src="assets/html.png" alt="">
+                <h4>HTML</h4>
+                <p class="primary-text">Lorem Ipsum is simply dummy text of the printing.</p>
+                <a href="">Learn More</a>
+            </div>
+            <div class="current-target-content css">
+                <img src="assets/css.png" alt="">
+                <h4>CSS</h4>
+                <p class="primary-text">Lorem Ipsum is simply dummy text of the printing.</p>
+                <a href="">Learn More</a>
+            </div>
+            <div class="current-target-content js">
+                <img src="assets/js.png" alt="">
+                <h4>JavaScript</h4>
+                <p class="primary-text">Lorem Ipsum is simply dummy text of the printing.</p>
+                <a href="">Learn More</a>
+            </div>
+        </div>
+       </section>
     </main>
     <footer>
 
