Next-target section added

--- a/index.html
+++ b/index.html
@@ -67,8 +67,8 @@
             </div>
         </div>
      </section>
-     <!-- Inspiration section --------------------- -->
-      <section class="inspiration">
+    <!-- Inspiration section --------------------- -->
+     <section class="inspiration">
         <div class="inspiration-title">
             <h1 class="primary-h1">My Inspiration</h1>
             <p class="primary-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text.</p>
@@ -77,8 +77,8 @@
             <iframe width="100%" height="100%" src="https://www.youtube.com/embed/Cxf5sOXG0w0?si=zMFZqS4gSRpLK5T0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
         </div>
       </section>
-      <!-- Current target section ------------------ -->
-       <section class="current-target">
+    <!-- Current target section ------------------ -->
+     <section class="current-target">
         <div class="current-target-title">
             <h1 class="primary-h1">My Current Target</h1>
             <p class="primary-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text.</p>
@@ -104,6 +104,39 @@
             </div>
         </div>
        </section>
+    <!-- Next-Target section ----------------------- -->
+      <section class="next-target">
+        <div class="next-target-title">
+            <h1 class="primary-h1">My Next Target</h1>
+            <p class="primary-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text.</p>
+        </div>
+        <div class="next-target-content-container">
+            <div class="next-target-content-container-img"><img src="assets/react.png" alt=""></div>
+            <div class="next-target-content">
+                <h5>ReactJS</h5>
+                <p class="primary-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text.</p>
+                <a href="">Learn More</a>
+            </div>
+        </div>
+        <div class="next-target-content-container">
+            <div class="next-target-content-container-img"><img src="assets/nodejs.png" alt=""></div>
+            <div class="next-target-content">
+                <h5>NodeJs</h5>
+                <p class="primary-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text.</p>
+                <a href="">Learn More</a>
+            </div>
+        </div>
+        <div class="next-target-content-container">
+            <div class="next-target-content-container-img"><img src="assets/mongodb.png" alt=""></div>
+            <div class="next-target-content">
+                <h5>MongoDB</h5>
+                <p class="primary-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text.</p>
+                <a href="">Learn More</a>
+            </div>
+        </div>
+    
+    </section>
+    <!-- Feed-Back section ----------------------- -->
     </main>
     <footer>
 
