--- a/index.html
+++ b/index.html
@@ -137,9 +137,28 @@
     
     </section>
     <!-- Feed-Back section ----------------------- -->
+     <section class="feedback">
+        <div class="feedback-container">
+            <h1>I need Support</h1>
+            <p>Loremfeedback-input&btn-container Ipsum is simply dummy text of the printing and typesetting industry.</p>
+            <div class="feedback-input-btn-container">
+                <input type="text" placeholder="Suggest me any feedback for me">
+                <button>Submit</button>
+            </div>
+        </div>
+     </section>
     </main>
     <footer>
-
+        <div class="footer-container">
+            <div class="footer-content">
+                <p>An Open Commitment by HS Niloy</p>
+            </div>
+            <div class="footer-icon">
+                <a href=""><img src="assets/facebook.png" alt=""></a>
+                <a href=""><img src="assets/github.png" alt=""></a>
+                <a href=""><img src="assets/linkedin-icon 1.png" alt=""></a>
+            </div>
+        </div>
     </footer>
 </body>
 </html>
