--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 
 
-    <!-- nav section------------------------------ -->
+    <!-- nav section------------------------------------------------------ -->
     <header class="header">
         <nav class="nav">
             <h3>HS Niloy</h3>
@@ -17,7 +17,7 @@
                 <button>Download Resume</button>
             </div>
         </nav>
-    <!-- Banner section------------------------------ -->
+    <!-- Banner section--------------------------------------------------- -->
      <section class="banner-section">
         <div class="banner-content">
             <img src="assets/Group.png" alt="coder">
@@ -30,7 +30,7 @@
      </section>
     </header>
     <main>
-    <!-- web-development section ----------------- -->
+    <!-- web-development section ----------------- -------------------------->
      <section class="web-dev">
         <div class="web-dev-title">
             <h1>Why Web Development??</h1>
@@ -67,7 +67,7 @@
             </div>
         </div>
      </section>
-    <!-- Inspiration section --------------------- -->
+    <!-- Inspiration section --------------------- -------------------------->
      <section class="inspiration">
         <div class="inspiration-title">
             <h1 class="primary-h1">My Inspiration</h1>
@@ -77,7 +77,7 @@
             <iframe width="100%" height="100%" src="https://www.youtube.com/embed/6Q2jPqyhFCQ?si=cRkbxft685a41AV_" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
         </div>
       </section>
-    <!-- Current target section ------------------ -->
+    <!-- Current target section ------------------------------------------ -->
      <section class="current-target">
         <div class="current-target-title">
             <h1 class="primary-h1">My Current Target</h1>
@@ -104,7 +104,7 @@
             </div>
         </div>
        </section>
-    <!-- Next-Target section ----------------------- -->
+    <!-- Next-Target section ------------------------------------------------>
       <section class="next-target">
         <div class="next-target-title">
             <h1 class="primary-h1">My Next Target</h1>
@@ -136,7 +136,7 @@
         </div>
     
     </section>
-    <!-- Feed-Back section ----------------------- -->
+    <!-- Feed-Back section ----------------------------------------------- -->
      <section class="feedback">
         <div class="feedback-container">
             <h1>I need Support</h1>
